--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,13 @@
-<h1>Join us</h1>
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+<link rel="stylesheet" href="/app.css">
 
-<p>
-  Enter your email to join <strong><%=data%></strong> others on our waitlist.
-</p>
-
-<form method="post" action="/register">
-  <input type="email" class="form" placeholder="Enter Your Email" />
-  <button>Join Now</button>
-</form>
+<div class="flex-container">
+    <div class="container">
+        <h1>JOIN US</h1>
+        <p class="lead">Enter your email to join <strong><%= data %></strong> others on our waitlist. We are 100% not a cult. </p>
+        <form method="POST" action='/register' autocomplete="off">
+            <input type="text" name="email" class="form" placeholder="Enter Your Email">
+            <button>Join Now</button>
+        </form>
+    </div>
+</div>
